# gofa_libegm_demo

./: CMakeLists.txt  README.md  package.xml
docs/cmake/: readme.md
src/: a1_joint_trajectory_node.cpp  a2_pose_trajectory_node.cpp  a2_test.cpp  b1_joint_static_goal_node.cpp  b2_pose_static_goal_node.cpp  c1_joint_controller_node.cpp  c2_pose_controller_node.cpp  c3_joint_velocity_controller_node.cpp  c4_pose_velocity_controller_node.cpp  gofa_test_joint_trajectory.cpp
